<resources>
    <string name="app_name">Калькулятор БЖУ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Калькулятор БЖУ</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_result">Результаты</string>
    <string name="nav_about">Что такое БЖУ?</string>
    <string name="nav_calculate">Расчет БЖУ</string>
    <string name="title_activity_login">Вход</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="about_pfc"><b>Белок</b> — важный строительный элемент нашего организма, находящийся в каждой клетке. Он является питательным элементом при поддержании или построении наших мышц. Именно поэтому необходимо потреблять качественный белок, с содержанием всех полезных аминокислот. В 1 грамме содержится 4 ккал. Источники полезного белка: яичный белок, рыба, куриное филе, нежирное мясо, морепродукты. При недостатке белка в организме вы не только не наберёте необходимую мышечную массу, но и приобретёте обвисшую кожу и дряблое тело. При отсутствии каких-либо физических нагрузок достаточно потреблять 1–1,5 гр белка на 1 кг веса, но если спорт присутствует в жизни, то женщинам нужно 1,8–2,5 гр белка на 1 кг веса, мужчинам 3 гр белка на 1 кг веса. \n\n <b>Жиры</b> — источник энергии. На 1 грамм приходится 9 ккал. Жиры растительного происхождения участвуют в необходимых процессах организма, например, таких, как обогащение кислородом клеток. Но следует отдавать предпочтение только ненасыщенным жирам: оливковое и льняное масло, разные виды орехов. При недостатке правильных жиров ухудшается состояние волос, ногтей и кожи, увеличивается вес. Рекомендуется употреблять 1 гр жира на 1 кг веса. \n\n <b>Углеводы</b> — не менее важная группа среди питательных веществ. Благодаря глюкозе, которая вырабатывается из потребляемого гликогена, наш организм нормально функционирует. Если вовремя не употреблять в пищу углеводы, то для поддержки функциональности пойдут наши мышцы. В 1 грамме углеводов в среднем содержится 4 ккал. И именно количество углеводов в сутки изменяется в зависимости от выбранной цели — снижения или набора веса и массы. Принято считать, что для нормальной работы организма необходимо 5 гр углеводов на 1 кг веса. Хотите похудеть — сокращайте их количество. \n\n Углеводы делятся на простые и сложные. Первые — пустая энергия, при их попадании в организм мы практически ничего не затрачиваем на их переработку. В первую очередь, это шоколад, печенье, фастфуд и прочая нездоровая пища. Сложные углеводы, наоборот, полезны. К ним относятся различные крупы, овощи, цельнозерновой хлеб. \n\n Но обязательно нужно помнить, что углеводы нельзя исключать полностью. Их недостаток приводит к отсутствию энергии, тонуса, потере мышечной массы. Но и избыток углеводов грозит лишним весом.</string>
    <string name="about_text_main">Для здорового образа жизни приходиться придерживаться принципов правильного питания. Один из ключевых моментов — расчёт соотношения белков, жиров и углеводов — <b>формулы БЖУ.</b></string>
    <string name="header_under_title">Ваш помощник при расчете калорий</string>
    <string name="exit">Выйти</string>
</resources>
