<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_calculate_pfc"
            android:icon="@drawable/calculate_pfc"
            android:title="@string/nav_calculate" />
        <item
            android:id="@+id/nav_result_pfc"
            android:icon="@drawable/result_pfc"
            android:title="@string/nav_result" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />

    </group>
</menu>
